--- a/package.json
+++ b/package.json
@@ -36,11 +36,13 @@
   },
   "dependencies": {
     "antd": "^3.10.1",
+    "axios": "^0.18.0",
     "leaflet": "^1.3.4",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-leaflet": "^2.1.0",
     "react-redux": "^5.0.7",
-    "redux": "^4.0.1"
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0"
   }
 }
