--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     "file-loader": "^2.0.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
-    "prop-types": "^15.6.2",
     "react-hot-loader": "^4.3.11",
     "style-loader": "^0.23.1",
     "url-loader": "^1.1.2",
@@ -38,8 +37,10 @@
     "antd": "^3.10.1",
     "axios": "^0.18.0",
     "leaflet": "^1.3.4",
+    "prop-types": "^15.6.2",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
+    "react-geocode": "^0.1.2",
     "react-leaflet": "^2.1.0",
     "react-redux": "^5.0.7",
     "redux": "^4.0.1",
